# multidocchat

./: .gitIgnore  Dockerfile  README.md  docker-compose.yml  init-localstack.sh  main.py  pyproject.toml  requirements.txt  start.sh  streamlit_app.py  worker.py
.github/workflows/: aws.yml  task_defination.json  task_definition_worker.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/utils/: document_ops.py  dynamo_store.py  model_loader.py  pinecone_store.py  s3_storage.py
templates/: index.html
tests/: conftest.py
tests/integration/: test_chat_route.py  test_upload_route.py
